# etlproject

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
contato/: index.html
data/output/: output.xlsx
dataproject/: main.py
dataproject/pipeline/: extract.py  load.py  transform.py
docs/: contato.md  index.md  linkedin.md
docs/getting-started/: extract.md  load.md  transform.md
etlproject/: README.md  main.py
etlproject/pipeline/: __init__.py  extract.py  load.py  transform.py
getting-started/extract/: index.html
getting-started/load/: index.html
getting-started/transform/: index.html
linkedin/: index.html
search/: search_index.json
tests/: __init__.py  test_pipeline.py
