[tool.poetry]
name = "etlproject"
version = "0.1.0"
description = "ETL Project"
authors = ["Haroldo Proenca"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pandas = "2.1.1"
openpyxl = "^3.1.2"
pytest = "^7.4.2"
isort = "^5.12.0"
blue = "^0.9.1"
pip-audit = "^2.6.1"
pydocstyle = "^6.3.0"
taskipy = "^1.12.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.3"
pygments = "^2.16.1"
mkdocs-material = "^9.4.6"
pymdown-extensions = "^10.3.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."

[tool.pylint]
jobs = "10"
